--- a/index.html
+++ b/index.html
@@ -11,9 +11,38 @@
 <body>
  <h1>Mümin Kayaaslan</h1>   
  <h2>Hakkımda</h2>
- <p>Merhaba. Ben Mümin Kayaaslan. Konya'da yaşıyorum. Müzik dinlemeyi  ve kitap okumayı severim.</p> <p> Ayrıca gezmeyi, yeşil alanları çok severim. Motosiklet tutkunuyumdur... </p>
-<h2>Hedeflerim</h2>
-<p>Tabii ki şuan ilk hedefim üniversiteyi kazanmak. Daha sonraki ve aslında üniversiteyi kazandıktan hemen sonra ise iyi bir yazılımcı olmak istiyorum.</p>
-<p>Ve yazılımcı hayalimde bana yol göstermekte olan patika ekibine teşekkürlerimi sunuyorum...</p>
+ <p>Merhaba. Ben Mümin Kayaaslan. Konya'da yaşıyorum. Yozgat Bozok Üniversitesi Bİlgisayar Mühendisliği öğrencisiyim. Müzik dinlemeyi  ve kitap okumayı severim.</p> <p> Ayrıca gezmeyi, yeşil alanları çok severim. Motosiklet tutkunuyumdur... </p>
+<h2>İlgi Alanlarım</h2>
+<div>
+    <ol>
+        <li><h3>Film</h3></li>
+            <ul>
+                <li><a href="https://www.imdb.com/title/tt0396171/" target="_blank">Perfume(2006)</a></li>
+                <li>Börü</li>
+                <li>Dağ II</li>
+            </ul>
+   
+         <li><h3>Dizi</h3></li>
+  
+            <ul>
+                <li><a href="https://www.imdb.com/title/tt13675832/" target="_blank">Gibi</a></li>
+                <li>Börü 2039</li>
+                <li>Erşan Kuneri</li>
+            </ul>
+
+        <li><h3>Kitap</h3></li>
+            <ul>
+                <li><a href="https://www.goodreads.com/book/show/12612723-ruh-adam" target="_blank">Ruh Adam</a></li>
+                <li>Otomatik Portakal</li>
+                <li>Kızıl Tuğ</li>
+            </ul>
+    </ol>
+</div>
+<div>
+    <h1>Sevdiğim Dizi</h1>
+    <h2>Börü</h2>
+    <img src="boru.jpg" alt="">
+    <p>Börü dizisi 2018 yılında star tv de 6 bölüm olmak üzere yayınlanmış yönetmenliği Alper Çağlar'a ait olan bir dizidir.</p>
+</div>
 </body>
 </html>
